# SwarmDrop

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
.claude/skills/create-mcp-app/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/sea-orm-2/: SKILL.md
.github/workflows/: release.yml
dev-notes/: design.pen  implementation-roadmap.md  mobile-libp2p-investigation.md  mobile-strategy.md  phase-1-networking.md  phase-2-pairing.md  phase-4-mobile.md  product-requirements.md
dev-notes/blogs/: android-build-troubleshooting.md  authentication-system.md  auto-update-implementation.md  device-pairing-implementation.md  keypair-storage.md  mobile-safe-area.md  relay-circuit-fix.md  rmcp-tutorial.md
dev-notes/blogs/transfer/: concurrent-pulling-and-session-management.md  end-to-end-encryption.md  file-chunking-and-cross-platform-io.md  progress-tracking-and-frontend-state.md  (+1 more)
dev-notes/bugs/: breakpoint-resume-bugs-2026-03-03.md  bug.md
dev-notes/design/: auth-design.md  database-entity-design.md  design.pen  file-transfer-design.md  mcp-design.md  mcp-server-implementation.md  mobile-desogn.md  pairing-implementation.md  pairing-transfer-design.md  transfer-features-analysis.md  transfer-scenarios-design.md  transfer-system-refactor.md
dev-notes/roadmap/: implementation-roadmap.md  phase-1-networking.md  phase-2-pairing.md  phase-3-file-transfer.md
dev-notes/tutorials/: mcp-app-deep-dive.md  mcp-app-tutorial.md
docs/plans/: 2026-03-05-identify-based-node-filtering.md
scripts/: android.mjs
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/docs/: mcp-guide.md  pairing-workflows.md
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  transfer_file.rs  transfer_session.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20260310_000001_save_location_enum.rs
src-tauri/migration/src/m20260228_000001_init/: mod.rs
src-tauri/migration/src/m20260228_000001_init/entity/: mod.rs  transfer_file.rs  transfer_session.rs  types.rs
src-tauri/src/: android.rs  device.rs  error.rs  events.rs  lib.rs  main.rs  mobile.rs  protocol.rs
src-tauri/src/commands/: identity.rs  mcp.rs  mod.rs  pairing.rs  transfer.rs  upgrade.rs
src-tauri/src/database/: mod.rs  ops.rs
src-tauri/src/device/: manager.rs  mod.rs
src-tauri/src/file_sink/: android_ops.rs  mod.rs  path_ops.rs
src-tauri/src/file_source/: android_ops.rs  mod.rs  path_ops.rs
src-tauri/src/mcp/: mod.rs  resources.rs  server.rs  tools.rs
src-tauri/src/network/: config.rs  event_loop.rs  manager.rs  mod.rs
src-tauri/src/pairing/: code.rs  dht_key.rs  manager.rs  mod.rs
src-tauri/src/transfer/: crypto.rs  fs.rs  mod.rs  offer.rs  progress.rs  receiver.rs  sender.rs
src/commands/: identity.ts  index.ts  mcp.ts  network.ts  pairing.ts  transfer.ts  updater.ts  upgrade.ts
src/components/: ForceUpdateDialog.tsx  responsive-dialog.tsx
src/constants/: events.ts
src/contexts/: network-context.tsx
src/hooks/: use-android-fs.ts  use-breakpoint.ts  use-countdown.ts  use-mobile.ts  use-pairing-success.ts
src/lib/: auth-messages.ts  errors.ts  file-picker.ts  format-uptime.ts  format.ts  i18n.ts  stronghold.ts  tauri-store.ts  version.ts
src/routes/: __root.tsx  _app.tsx  _auth.tsx  devices.tsx  index.tsx
src/stores/: auth-store.ts  network-store.ts  pairing-store.ts  preferences-store.ts  secret-store.ts  transfer-store.ts  update-store.ts  upgrade-link-store.ts
(+111 files in other folders)
