[package]
name = "swarmdrop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1.0"
serde_json = "1"
tokio = "1.49.0"
futures = "0.3.31"
walkdir = "2.5.0"
swarm-p2p-core = { path = "../libs/core" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tauri-plugin-stronghold = "2"
tauri-plugin-biometry = "0.2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"

# 在 dev 模式下为依赖开启优化（加密运算必须）
# 否则 Stronghold 等加密库会慢 10-100 倍
[profile.dev.package."*"]
opt-level = 3

# Stronghold 相关依赖特别需要优化
[profile.dev.package.tauri-plugin-stronghold]
opt-level = 3
