[package]
name = "swarmdrop"
version = "0.2.14"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
tokio = "1.49.0"
swarm-p2p-core = { path = "../libs/core" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tauri-plugin-stronghold = "2"
tauri-plugin-biometry = "0.2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rand = "0.10.0"
chrono = "0.4.43"
sha2 = "0.10.9"
dashmap = "6.1.0"
chacha20poly1305 = "0.10.1"
blake3 = "1.8.3"
tauri-plugin-dialog = "2"
walkdir = "2"
tauri-plugin-http = "2.5.7"
uuid = { version = "1.21.0", features = ["v4"] }
path-slash = "0.2.1"
pathdiff = "0.2.3"
serde_bytes = "0.11"
tokio-util = "0.7"

# 桌面端启用 DNS 解析（Android 上 /etc/resolv.conf 不存在，不启用）
[target.'cfg(not(target_os = "android"))'.dependencies]
swarm-p2p-core = { path = "../libs/core", features = ["dns"] }

# Android 文件选择插件
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "2"

# 在 dev 模式下为依赖开启优化（加密运算必须）
# 否则 Stronghold 等加密库会慢 10-100 倍
[profile.dev.package."*"]
opt-level = 3

# Stronghold 相关依赖特别需要优化
[profile.dev.package.tauri-plugin-stronghold]
opt-level = 3
